kubernetes-mainfests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: public-ip-app
spec:
  type: NodePort
  ports:
    - port: 5000
      targetPort: 5000
      nodePort: 31028
  selector:
    app: public-ip-app
