kubernetes-mainfests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-ip-app
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: public-ip-app
            port:
              number: 5000
